option java_package = "org.dozer.vo.proto";
option java_outer_classname = "ProtoTestObjects";

message SimpleProtoTestObject {
    required string one	                        = 1;
}

message SimpleProtoTestObjectWithoutRequired {
    optional string one	                        = 1;
}

message ProtoTestObjectWithNestedProtoObject {
    required string one                         = 1;
    required SimpleProtoTestObject nestedObject = 2;
}

enum ProtoEnum {
    VALUE1                                      = 1;
    VALUE2                                      = 2;
}

message ProtoObjectWithEnumField {
    required ProtoEnum enumField                = 1;
}

message ProtobufWithSimpleCollection {
    repeated SimpleProtoTestObject object       = 1;
}

message ProtobufWithSimpleCollectionContainer {
    required ProtobufWithSimpleCollection object       = 1;
}

message ProtobufWithEnumCollection {
    repeated ProtoEnum object                   = 1;
}
